[package]
name = "dessert"
version = "0.1.1"
authors = ["Matthias Bussonnier <bussonniermatthias@gmail.com>"]
description = "A impler way of writing Serde custom serialize and deserialise traits."
readme = "readme.md"
license = "MIT"
repository = "https://github.com/carreau/dessert"

[dependencies]
dessert-derive = "0.1.0"
serde = "1.0.27"
serde_derive = "1.0.27"

[dev-dependencies]
serde_json = "1.0.10"
